force-app/main/default/objects/Payment_Policy__mdt/Payment_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Payment Policy</label>
    <pluralLabel>Payment Policies</pluralLabel>
</CustomObject>