force-app/main/default/objects/Payment_Policy__mdt/fields/Allow_Duplicate_Payment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Duplicate_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Duplicate Payment</label>
    <type>Checkbox</type>
</CustomField>