force-app/main/default/objects/Payment_Policy__mdt/fields/Default_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Status__c</fullName>
    <label>Default Payment Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>