force-app/main/default/objects/Payment_Policy__mdt/fields/Duplicate_Detection_Mode__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Detection_Mode__c</fullName>
    <label>Duplicate Detection Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>