force-app/main/default/objects/Payment_Policy__mdt/fields/Enable_FX_Fields__c.field-meta.xml
<CustomField>
    <fullName>Enable_FX_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable FX Fields</label>
    <type>Checkbox</type>
</CustomField>