force-app/main/default/objects/Payment_Policy__mdt/fields/Require_Invoice_Outstanding_Check__c.field-meta.xml
<CustomField>
    <fullName>Require_Invoice_Outstanding_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Invoice Outstanding Check</label>
    <type>Checkbox</type>
</CustomField>